# OptCuts

./: .gitignore  CMakeLists.txt  README.md  batch.py  helpers.py  segmentation.py  segmentation_v2.py  unwrap.py
ext/libigl/: CMakeLists.txt
ext/libigl/include/igl/copyleft/cgal/: point_areas.h
ext/xatlas/: CMakeLists.txt  xapack.cpp
sdf120/: CMakeLists.txt  sdf120.cpp
src/: Scaffold.cpp  main.cpp
